tests/snapshots/e2e__dump@workflow-call-chain.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [],
  "externals": [
    {
      "gitref": "v1",
      "owner": "acme",
      "repo": "shared",
      "subpath": ".github/workflows/deploy.yml"
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/caller.yml",
      "jobs": [
        {
          "calls_secrets": "inherit",
          "calls_workflow": "local:.github/workflows/leaf.yml",
          "id": "call",
          "step_uses_kinds": []
        }
      ],
      "name": "Caller",
      "triggers": [
        "push"
      ]
    },
    {
      "id": ".github/workflows/leaf.yml",
      "jobs": [
        {
          "calls_secrets": "inherit",
          "calls_workflow": "external:acme/shared/.github/workflows/deploy.yml@v1",
          "id": "fanout",
          "step_uses_kinds": []
        }
      ],
      "name": "Leaf",
      "triggers": [
        "workflow_call"
      ]
    }
  ]
}
