tests/snapshots/e2e__graph@actionlint-findings.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/ci.yaml<br/>ci"]
  wf_1__push[".github/workflows/release.yaml<br/>release"]
end
subgraph pull_request_target
  wf_1__pull_request_target[".github/workflows/release.yaml<br/>release"]
end
