tests/snapshots/e2e__graph@composite-annotations.snap
---
source: tests/e2e.rs
assertion_line: 433
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/entry.yml<br/>Entry"]
end
subgraph workflow_dispatch
  wf_2__workflow_dispatch[".github/workflows/step-target.yml<br/>StepTarget"]
end
wf_1[".github/workflows/manifest-target.yml<br/>ManifestTarget"]
wf_2[".github/workflows/step-target.yml<br/>StepTarget"]
act_0[".github/actions/notify<br/>Notify"]
wf_0__push --> act_0
act_0 -. triggers .-> wf_1
act_0 -. dispatches .-> wf_2
classDef ravelactAnnotation stroke:#dca,stroke-dasharray:5 5
