tests/snapshots/e2e__graph@composite-invokes-composite.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/ci.yml<br/>CI"]
end
act_0[".github/actions/fetch-deps<br/>Fetch Deps"]
act_1[".github/actions/setup-toolchain<br/>Setup Toolchain"]
ext_0["actions/cache@v4"]
ext_1["actions/checkout@v4"]
act_0 --> ext_0
act_1 --> act_0
wf_0__push --> act_1
wf_0__push --> ext_1
