tests/snapshots/e2e__graph@composite-step-if.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/ci.yml<br/>Composite step-if caller"]
end
act_0[".github/actions/foo<br/>Foo composite"]
wf_0__push --> act_0
