tests/snapshots/e2e__graph@concurrency-input-expression.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/deploy.yml<br/>Deploy"]
end
subgraph pull_request
  wf_0__pull_request[".github/workflows/deploy.yml<br/>Deploy"]
end
subgraph workflow_dispatch
  wf_0__workflow_dispatch[".github/workflows/deploy.yml<br/>Deploy"]
end
ext_0["actions/checkout@v4"]
wf_0__pull_request --> ext_0
wf_0__push --> ext_0
wf_0__workflow_dispatch --> ext_0
