tests/snapshots/e2e__graph@cross-repo-call.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_12__push[".github/workflows/release.yml<br/>Release"]
  wf_16__push[".github/workflows/unit.yml<br/>Unit"]
  wf_4__push[".github/workflows/docs.yml<br/>Docs"]
  wf_5__push[".github/workflows/entry-a.yml<br/>Entry A"]
  wf_8__push[".github/workflows/integration.yml<br/>Integration"]
end
subgraph pull_request
  wf_10__pull_request[".github/workflows/lint.yml<br/>Lint"]
  wf_15__pull_request[".github/workflows/typecheck.yml<br/>Typecheck"]
  wf_16__pull_request[".github/workflows/unit.yml<br/>Unit"]
  wf_6__pull_request[".github/workflows/entry-b.yml<br/>Entry B"]
  wf_7__pull_request[".github/workflows/format.yml<br/>Format"]
end
subgraph schedule
  wf_11__schedule[".github/workflows/perf.yml<br/>Perf"]
  wf_13__schedule[".github/workflows/security.yml<br/>Security"]
  wf_14__schedule[".github/workflows/stale.yml<br/>Stale"]
  wf_2__schedule[".github/workflows/codeql.yml<br/>CodeQL"]
end
subgraph workflow_dispatch
  wf_3__workflow_dispatch[".github/workflows/cross-call.yml<br/>Cross Call"]
end
subgraph pull_request_target
  wf_9__pull_request_target[".github/workflows/labeler.yml<br/>Labeler"]
end
wf_0[".github/workflows/_reusable.yml<br/>Reusable Build"]
wf_1[".github/workflows/_reusable_release.yml<br/>Reusable Release"]
ext_0["actions/checkout@v4"]
ext_1["actions/dependency-review-action@v4"]
ext_2["actions/labeler@v5"]
ext_3["actions/stale@v9"]
ext_5["github/codeql-action/analyze@v3"]
extwf_0["example-org/shared-workflows/.github/workflows/foo.yml@0000000000000000000000000000000000000000"]
wf_0 --> ext_0
wf_1 --> ext_0
wf_10__pull_request --> ext_0
wf_11__schedule --> ext_0
wf_12__push --> wf_1
wf_13__schedule --> ext_0
wf_13__schedule --> ext_1
wf_14__schedule --> ext_3
wf_15__pull_request --> ext_0
wf_16__pull_request --> ext_0
wf_16__push --> ext_0
wf_2__schedule --> ext_0
wf_2__schedule --> ext_5
wf_3__workflow_dispatch --> extwf_0
wf_4__push --> ext_0
wf_5__push --> wf_0
wf_6__pull_request --> wf_0
wf_7__pull_request --> ext_0
wf_8__push --> ext_0
wf_9__pull_request_target --> ext_2
