tests/snapshots/e2e__graph@dangling-local-uses.snap
---
source: tests/e2e.rs
assertion_line: 488
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/ci.yml<br/>Dangling Local Uses"]
end
ext_0["actions/checkout@v4"]
%% unresolved local-action: .github/actions/typo
wf_0__push --> ext_0
